@@ -1,6 +1,5 @@
 --- STUFF FOR 0.11.0 RELEASE ---
 
-	Oscar blocking
 	Actions (e.g. /op) for IRC
 	Chat for Yahoo/ICQ/MSN(??)
 	File transfer for Yahoo/ICQ/Oscar/Napster
